<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="70dp"
    tools:context=".activitySignUp.view.BasicSignUpActivity">

    <ImageView

        android:id="@+id/app_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_icon"
        android:text="@string/enter_details_text"
        android:textSize="20sp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/company_textinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <EditText
            android:id="@+id/organization_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/organizatio_hint" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/designation_textinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/company_textinput">

        <EditText
            android:id="@+id/designation_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/designation_hint" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/saveOrganization_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/designation_textinput"
        android:layout_marginTop="50dp"
        android:background="@color/colorAccent"
        android:text="@string/button_save" />

</RelativeLayout>