<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:gravity="bottom"

    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/everest" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/account"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="38dp"
        android:contentDescription="@string/nav_header_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/nepal"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/email"
        android:background="@color/greylight"
        android:paddingLeft="15dp"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:background="@color/greylight"
        android:paddingLeft="15dp"
        android:paddingBottom="5dp"
        android:text="@string/nav_header_subtitle"
        android:textColor="@android:color/white" />

</RelativeLayout>
